<resources>
    <string name="app_name">Football Club</string>
    <array name="league_name">
        <item>English Premier League</item>
        <item>American Major League Soccer</item>
        <item>Spanish La Liga</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
    </array>
    <string name="title_last_match">Last Match</string>
    <string name="title_next_match">Next Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="match_detail">Match Detail</string>
    <string name="red_cards">Red Cards</string>
    <string name="versus">vs</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="goals">Goals</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="added_to_favorites">Added to favorites.</string>
    <string name="removed_from_favorites">Removed from favorites.</string>
    <string name="title_favorites">Favorites</string>
    <string name="label">Label</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="title_match">Matches</string>
    <string name="title_teams">Teams</string>
    <string name="title_activity_team">Team Activity</string>
    <string name="action_settings">Settings</string>
    <string name="title_players">Players</string>
    <string name="title_team_details">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_badge">Team Badge</string>
    <string name="player_details">Details</string>
    <string name="description">Description</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="position">Position</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="search">Search...</string>
    <string name="app_label">Football Club</string>
    <string name="title_event_favorites">Favorite Events</string>
    <string name="title_team_favorites">Favorite Teams</string>
</resources>
