<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="match_time" type="id" />
    <item name="team_home" type="id" />
    <item name="team_away" type="id" />
    <item name="score_home" type="id" />
    <item name="score_away" type="id" />
    <item name="match_layout" type="id" />
</resources>