<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_add_to_favorites"
        android:icon="@drawable/ic_star_border_black_24dp"
        android:title="@string/add_to_favorites"
        android:iconifiedByDefault="false"
        app:showAsAction="ifRoom" />

</menu>