<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_last_match"
        android:icon="@drawable/ic_av_timer_black_24dp"
        android:title="@string/title_last_match" />

    <item
        android:id="@+id/navigation_next_match"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/title_next_match" />

    <item
        android:id="@+id/navigation_favorite_match"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/title_favorites" />

</menu>
